--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "notes-node",
+  "name": "weather-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "jim",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.5",
-    "nodemon": "^1.17.3",
-    "yargs": "^4.7.1"
-  }
+    "request": "^2.73.0"
+  },
+  "devDependencies": {}
 }
